// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpotlightSearchButton /> should render a search button 1`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-a432 navbarButton ui-button-ghost-a432 ui-button-primary-a432"
  id="spotlight-button-1"
  type="button"
>
  <span
    class="ui-button-content-a432"
  >
    <span
      class="wrapper buttonIcon"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        search
      </i>
    </span>
    Search
  </span>
</button>
`;

exports[`<SpotlightSearchButton /> should render a tooltip on button hover on mac 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  <div
    class="tooltipContent"
  >
    <span>
      Global search
    </span>
    <div
      class="wrapper dark"
    >
      ⌘
    </div>
    <div
      class="wrapper dark"
    >
      k
    </div>
  </div>
</div>
`;

exports[`<SpotlightSearchButton /> should render a tooltip on button hover on other systems 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  <div
    class="tooltipContent"
  >
    <span>
      Global search
    </span>
    <div
      class="wrapper dark"
    >
      ctrl
    </div>
    <div
      class="wrapper dark"
    >
      k
    </div>
  </div>
</div>
`;
